# math-solver

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml  script.py
app/adapters/database/: uow.py  utils.py
app/adapters/database/gateways/: __init__.py  answer_db_gateway.py  task_db_gateway.py  taskset_db_gateway.py  theme_db_gateway.py
app/adapters/database/migrations/: env.py
app/adapters/database/migrations/versions/: 2c641048c11e_make_task_taskset_relation_nullable.py  8d0947121951_add_status.py  be3775bd2adb_add_name_for_taskset.py  cedbf6739872_init.py
app/adapters/database/models/: __init__.py  answer.py  base.py  task.py  taskset.py  theme.py
app/entities/: __init__.py  answer.py  task.py  taskset.py  theme.py
app/gateways/database/: uow.py
app/gateways/database/models/: answer.py  base.py  task.py  taskset.py  theme.py
app/main/: ioc.py  start.py
app/services/: __init__.py
app/services/interactors/: __init__.py  answer_crud.py  task_crud.py  taskset_crud.py  taskset_solver.py  theme_crud.py
app/services/protocols/: __init__.py  uow.py
app/services/protocols/answer/: __init__.py  answer_gateway.py  dto.py
app/services/protocols/task/: __init__.py  dto.py  task_gateway.py
app/services/protocols/taskset/: __init__.py  dto.py  taskset_gateway.py
app/services/protocols/theme/: __init__.py  dto.py  theme_gateway.py
app/web/: ioc.py
app/web/routers/: __init__.py  answer_router.py  task_router.py  taskset_router.py  theme_router.py
tests/entities/: test_taskset.py
tests/services/: test_taskset_solver.py  utils.py
