[tool.poetry]
name = "math-tests-platform"
version = "0.1.0"
description = ""
authors = ["Vladislav Romaschenko <vlad1vaselkov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["uvicorn"], version = "^0.105.0"}
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.2"
SQLAlchemy = "^2.0.23"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
